--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ header {
 }
 
 .card {
-    background: #2d2d2d;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
     border-radius: 10px;
     padding: 20px;
     margin-bottom: 20px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
 
 #server-ip {
@@ -48,6 +48,11 @@ header {
 }
 
 /* 新增样式 */
+.btn-custom-size {
+    padding: 8px 16px; /* 调整按钮的内边距 */
+    font-size: 0.9rem; /* 调整按钮的字体大小 */
+}
+
 .btn {
     box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
 }
@@ -84,4 +89,3 @@ header {
 footer {
     margin-top: 4rem;
 }
-
